(dsm) Documentation: added a LibreOffice spreadsheet showing the VOC items that have 
been retained and removed compared to ScarletDME
(dsm) Documentation: added a LibreOffice document regarding installation.
(dsm) Have started modifying @ dictionary records and related dictionary items so that
default LIST reports are formatted for 120x36 terminal size.
(dsm) Change max string size to 1 GB
 

Version 0.7.0
-------------
(mab) Created a BASIC compiler (written in Python) for SD, we now have a version of SD 
that has no binary elements required for installation.  Everything is source and auditable.  
During installation the Python basic compiler compiles the necessary source code in GPL.BP
hat in the past prevented the system from being binary element free.
Also, any required dynamic dictionaries are created during installation.

Version 0.6.4
-------------
(mab) sd command as privileged user (sudo sd) will start out in account SDSYS  
(mab) Only allow non privileged user to LOGIN or LOGTO:
      Their own account.
      Group account which they have access to.
         A list of allowed users is found in ACCOUNTS record, field <ACC$USERS>
	 CREATE-ACCOUNT USER adds user to their own account list.
	 Use the MODIFY command ie) "MODIFY ACCOUNTS <account name>" to edit user list for now.
(mab) Change install script template of ACCOUNTS / SDSYS file to ownership from  
        -rwxrwxr-x 1 sdsys sdusers
      To
        -rw-rw-r-- 1 root  root 
(mab) LIST-USERS now reports for user: Last Login Account, Time and Date        
(dsm) Removed MED from GPL.BP, GPL.BP.OUT, gcat, NEWVOC & VOC
      Moved GPL.BP/MED source code to Depreciated
(dsm) Removed SED from GPL.BP, GPL.BP.OUT, gcat, NEWVOC & VOC
      Moved GPL.BP/SED source code to Depreciated
(dsm) Removed SCRB from GPL.BP, GPL.BP.OUT, gcat, NEWVOC & VOC
      Moved GPL.BP/SCRB source code to Depreciated
(dsm) Removed SCREEN$STOP.SCR from GPL.BP
(dsm) Removed SCREEN from GPL.BP and BPL.BP.OUT